# s3-vectors-at-home

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
api/: main.py
minio/: docker-compose.yaml
s3_vectors_at_home/: __init__.py  cli.py
tests/: test_api.py  test_cli.py  test_vectorstore.py
vectorstore/: core.py
