[project]
name = "s3-vectors-at-home"
version = "0.1.0"
description = "S3 vector search with MinIO, FAISS, and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "minio",
    "numpy",
    "faiss-cpu",
    "httpx",
    "torch==2.2.2",
    "pydantic",
    "sentence-transformers"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-cov"]

[project.scripts]
s3-vectors-cli = "s3_vectors_at_home.cli:main"
